<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="44dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adresse Serveur :"
                android:id="@+id/textView2" android:layout_weight="0.20"/>
        <EditText
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAdresse" android:layout_weight="0.30"
                android:text="@string/adresseServeur"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="74dp">
        <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonConnection"
                android:layout_gravity="center_horizontal"
                android:id="@+id/boutonConnection"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/textView"
                android:id="@+id/zoneDeTexte"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">
        <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tetromino I"
                android:src="@drawable/tetromino_i"
                android:layout_gravity="center" android:adjustViewBounds="false" android:baselineAlignBottom="false"
                android:clickable="true" android:focusable="true" android:focusableInTouchMode="true"
                android:onClick="@string/buttonTetrominoI" android:nestedScrollingEnabled="false"
                android:id="@+id/boutonTetrominoI"/>
        <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tetromino T"
                android:src="@drawable/tetromino_t" android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false" android:baselineAlignBottom="false" android:clickable="true"
                android:focusable="true" android:focusableInTouchMode="true"
                android:onClick="@string/buttonTetrominoT" android:id="@+id/boutonTetrominoT"/>
        <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tetromino O"
                android:src="@drawable/tetromino_o" android:layout_gravity="center" android:adjustViewBounds="false"
                android:baselineAlignBottom="false" android:clickable="true" android:focusable="true"
                android:focusableInTouchMode="true" android:onClick="@string/buttonTetrominoO"
                android:id="@+id/boutonTetrominoO"/>
        <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tetromino J"
                android:id="@+id/boutonTetrominoJ" android:src="@drawable/tetromino_j"
                android:layout_gravity="center_horizontal" android:adjustViewBounds="false"
                android:baselineAlignBottom="false" android:clickable="true" android:focusable="true"
                android:focusableInTouchMode="true" android:onClick="@string/buttonTetrominoJ"/>
        <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tetromino L"
                android:id="@+id/boutonTetrominoL" android:src="@drawable/tetromino_l"
                android:layout_gravity="center" android:adjustViewBounds="false" android:baselineAlignBottom="false"
                android:clickable="true" android:focusable="true" android:focusableInTouchMode="true"
                android:onClick="@string/buttonTetrominoL"/>
        <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tetromino S"
                android:src="@drawable/tetromino_s"
                android:layout_gravity="center" android:adjustViewBounds="false" android:baselineAlignBottom="false"
                android:clickable="true" android:focusable="true" android:focusableInTouchMode="true"
                android:onClick="@string/buttonTetrominoS" android:id="@+id/boutonTetrominoS"/>
        <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tetromino Z"
                android:src="@drawable/tetromino_z" android:layout_gravity="center"
                android:adjustViewBounds="false" android:baselineAlignBottom="false" android:clickable="true"
                android:focusable="true" android:focusableInTouchMode="true"
                android:onClick="@string/buttonTetrominoZ" android:id="@+id/boutonTetrominoZ"/>
    </LinearLayout>
</LinearLayout>

